# dan_toropov_cw_8

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
data/fixtures/: test_data_habits.json  test_data_users.json
habits/: admin.py  models.py  paginators.py  serializer.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_options_alter_place_options_and_more.py  0003_habit_time_to_complete.py  0004_alter_habit_reward.py  0005_alter_habit_place.py  0006_alter_habit_owner.py  0007_habit_start_time.py  0008_alter_habit_options.py
habits/src/: celery_cmd.py  newsapp_scheduler.py  utils.py
users/: admin.py  models.py  serializer.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_tg_chat_id.py
